bare bones music player in app

--- a/MelodyNativeApp/app.json
+++ b/MelodyNativeApp/app.json
@@ -22,7 +22,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.tlemaster.MelodyNativeApp"
     },
     "web": {
       "bundler": "metro",
@@ -34,6 +35,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "afcda250-f631-4631-8141-ad9f6f380e11"
+      }
     }
   }
 }
