--- a/MelodyNativeApp/package.json
+++ b/MelodyNativeApp/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/native": "^6.0.2",
     "expo": "~50.0.14",
     "expo-av": "~13.10.5",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-notifications": "~0.27.6",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
@@ -29,8 +31,9 @@
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.6",
-    "expo-notifications": "~0.27.6"
+    "@react-native-community/slider": "4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
