--- a/MelodyNativeApp/.gitignore
+++ b/MelodyNativeApp/.gitignore
@@ -39,3 +39,9 @@ yarn-error.*
 
 expo-env.d.ts
 # @end expo-cli
+
+#binarys
+*.dtbcache.v2
+.vs/Melody/FileContentIndex/
+Repositories/obj/Release/net6.0/
+
