--- a/MelodyNativeApp/package.json
+++ b/MelodyNativeApp/package.json
@@ -13,6 +13,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "~8.0.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/slider": "4.5.5",
     "@react-navigation/native": "^7.0.0",
@@ -31,18 +33,19 @@
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "metro": "0.81.0",
+    "metro-config": "0.81.0",
+    "metro-resolver": "0.81.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-element-dropdown": "^2.10.4",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-track-player": "^4.1.1",
-    "react-native-web": "~0.19.13",
-    "@expo/config-plugins": "~9.0.0",
-    "@expo/prebuild-config": "~8.0.0",
-    "metro-resolver": "0.81.0",
-    "metro-config": "0.81.0"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
