--- a/MelodyNativeApp/package.json
+++ b/MelodyNativeApp/package.json
@@ -16,6 +16,7 @@
     "@expo/config-plugins": "~9.0.0",
     "@expo/prebuild-config": "~8.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "@react-navigation/native": "^7.0.0",
     "@rneui/base": "^0.0.0-edge.2",
@@ -38,6 +39,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
@@ -45,6 +47,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-track-player": "^4.1.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
